# app/controller/auth.go
@@ -82,7 +82,8 @@ func (a *Auth) handleCredentialLogin(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, result)
+	c.SetCookie("refresh-token", result.RefreshToken, int(a.refreshLifetime.Seconds()), "/api", os.Getenv("HOST"), false, true)
+	c.JSON(http.StatusOK, gin.H{"refreshToken": result.RefreshToken})
 	a.logger.Info("sign in successful, emitting event")
 	helpers.PublishEvent(c.Request.Context(), EventKeyUserSignedInV1, eventpayloads.UserSignedInEventArgs{
 		Timestamp:  time.Now().UTC(),
@@ -182,7 +183,8 @@ func (a *Auth) handleAccessTokenRefresh(c *gin.Context) {
 
 	helpers.PublishEvent(c.Request.Context(), EventKeyRefreshTokenRotateV1, nil) // TODO: make an event arg for this
 	a.logger.Info("refresh token rotated successfully!")
-	c.JSON(http.StatusOK, result)
+	c.SetCookie("refresh-token", result.RefreshToken, int(a.refreshLifetime.Seconds()), "/api", os.Getenv("HOST"), false, true)
+	c.JSON(http.StatusOK, gin.H{"accessToken": result.AccessToken})
 }
 
 // handleEmailExistsCheck checks whether a user exists with the specified email address
