# build/smithy/source/openapi/Auth.openapi.json
@@ -318,15 +318,10 @@
                     "accessToken": {
                         "type": "string",
                         "description": "The access token (JWT) granted to the user"
-                    },
-                    "refreshToken": {
-                        "type": "string",
-                        "description": "The refresh token for the client to obtain a new access token on expiration"
                     }
                 },
                 "required": [
-                    "accessToken",
-                    "refreshToken"
+                    "accessToken"
                 ]
             },
             "CredentialSignUpRequestContent": {
@@ -381,15 +376,10 @@
                     "accessToken": {
                         "type": "string",
                         "description": "The access token (JWT) granted to the user"
-                    },
-                    "refreshToken": {
-                        "type": "string",
-                        "description": "The refresh token for the client to obtain a new access token on expiration"
                     }
                 },
                 "required": [
-                    "accessToken",
-                    "refreshToken"
+                    "accessToken"
                 ]
             },
             "UnauthorizedErrorResponseContent": {
